@@ -23,6 +23,8 @@ import org.apache.solr.common.util.NamedList;
 public class OverseerSolrResponse extends SolrResponse {
   
   NamedList responseList = null;
+
+  private long elapsedTime;
   
   public OverseerSolrResponse(NamedList list) {
     responseList = list;
@@ -30,15 +32,19 @@ public class OverseerSolrResponse extends SolrResponse {
   
   @Override
   public long getElapsedTime() {
-    // TODO Auto-generated method stub
-    return 0;
+    return elapsedTime;
   }
   
   @Override
   public void setResponse(NamedList<Object> rsp) {
     this.responseList = rsp;
   }
-  
+
+  @Override
+  public void setElapsedTime(long elapsedTime) {
+    this.elapsedTime = elapsedTime;
+  }
+
   @Override
   public NamedList<Object> getResponse() {
     return responseList;
